crates/python_parser/tests/snapshots/invalid_syntax@global_stmt_expression.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/global_stmt_expression.py
---
## AST

```
Module(
    ModModule {
        range: 0..13,
        body: [
            Global(
                GlobalStmt {
                    range: 0..8,
                    names: [
                        Identifier {
                            id: Name("x"),
                            range: 7..8,
                        },
                    ],
                },
            ),
            Expr(
                ExprStmt {
                    range: 9..12,
                    value: UnaryOp(
                        UnaryOpExpr {
                            range: 9..12,
                            op: UAdd,
                            operand: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 11..12,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | global x + 1
  |          ^ Syntax Error: Simple statements must be separated by newlines or semicolons
  |
